# scholarship-eligibility

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260322_000001_create_phase2_domain_tables.py  20260402_000001_create_phase9_rag_chunk_table.py
app/: __init__.py
app/ai/: __init__.py
app/api/: __init__.py  router.py
app/collectors/: __init__.py  fetchers.py  parsers.py
app/core/: __init__.py  config.py
app/db/: __init__.py  session.py
app/extractors/: __init__.py  base.py  llm_scholarship_rules.py  prompt_builder.py  scholarship_rules.py
app/models/: __init__.py  base.py  common.py  document.py  notice.py  rag_chunk.py  rule.py
app/normalizers/: __init__.py  attachments.py  html_notice.py
app/repositories/: __init__.py  document_repository.py  notice_repository.py  rag_chunk_repository.py  rule_repository.py
app/schemas/: __init__.py  domain.py  llm_extraction.py  rag.py  search.py
app/services/: __init__.py  attachment_normalization.py  eligibility.py  extraction_logging.py  notice_collection.py  notice_normalization.py  rag_indexing.py  rule_extraction.py  search.py
app/storage/: __init__.py  local_raw_storage.py
docs/: implementation-plan.md  llm-extraction-faq.md  performance-benchmark.md  phase-8-portfolio-rubric.md  phase-8.0.md  phase-8.1.md  phase-8.2.md  phase-8.3.md  phase-8.4.md  phase-8.5.md  phase-8.6.md  phase-template.md  system-architecture.md
tests/integration/: test_phase2_repositories.py  test_phase3_collection_service.py  test_phase4_attachment_normalization.py  test_phase6_search_api.py  (+13 more)
(+21 files in other folders)
